Reetan.Nayak Dev 25/force-app/main/default/objects/Technical__kav/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>