Reetan.Nayak Dev 25/force-app/main/default/objects/Technical__kav/fields/Additional_Links__c.field-meta.xml
<CustomField>
    <fullName>Additional_Links__c</fullName>
    <label>Additional Links</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>