Reetan.Nayak Dev 25/force-app/main/default/objects/Technical__kav/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>