Reetan.Nayak Dev 25/force-app/main/default/objects/Technical__kav/fields/Technical_Detail__c.field-meta.xml
<CustomField>
    <fullName>Technical_Detail__c</fullName>
    <label>Technical Detail</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>