Reetan.Nayak Dev 25/force-app/main/default/objects/Technical__kav/fields/Technical_Overview__c.field-meta.xml
<CustomField>
    <fullName>Technical_Overview__c</fullName>
    <label>Technical Overview</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>